--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "edge-js": "^21.7.2",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -14,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && node /server/App.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,6 +41,10 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.72.0"
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "sass": "^1.72.0",
+    "sqlite3": "^5.1.7"
   }
 }
