--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
-    "concurrently": "^8.2.2",
     "edge-js": "^21.7.2",
-    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -18,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node src/server/App.js\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,10 +39,6 @@
     ]
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0",
-    "sass": "^1.72.0",
-    "sqlite3": "^5.1.7"
+    "sass": "^1.72.0"
   }
 }
