--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "edge-js": "^21.7.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "prod": "npx tailwindcss -i ./src/tailwind.css -o ./dist/tailwind.css --minify",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.72.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sass": "^1.72.0",
+    "tailwindcss": "^3.4.3"
   }
 }
